# vc-skills

./: .gitignore  .prettierignore  AGENTS.md  AI_README.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  VETCODERS.md  install.sh  install.toml  vetcoders-suite-showcase.html  vibecraft-framework.plugin  vibecrafted-framework.plugin
config/: aicx-sync.toml.example
docs/: AICX-SYNC.md  CONTRIBUTING-SKILLS.md  FAQ-ANSWERED.md  FAQ.md  FOUNDATION.md  HAMMERSPOON.md  ITERM2.md  MARKETPLACE_LISTING.md  PERCEPTION.md  QUICK_START.md  RELEASE_KICKOFF.md  SUBMISSION_FORMS.md  VIBECRAFTED.md  VIBECRAFTED_PITCH.md  WORKFLOWS.md  ZELLIJ.md  app.js  index.html  sitemap.xml  styles.css
operator/: .gitignore  Makefile
operator-tui/: Cargo.toml  README.md
operator/tui-agent/: .gitignore  Cargo.toml  LICENSE  README.md
operator/tui-agent/audits/: 2026-04-19_next-steps-agnostic.md  2026-04-19_next-steps-ghostty.md  2026-04-29_vc-intents.md  2026-04-30_vc-review.md
operator/tui-agent/audits/historical/: 2026-04-19_next-steps-agnostic-deprecated.md  2026-04-19_next-steps-ghostty-deprecated.md
operator/tui-agent/src/: app.rs  config.rs  launch.rs  lib.rs  mux.rs  polarize.rs  skills_catalog.rs  state.rs  ui.rs
operator/tui-agent/tests/: launch_readiness.rs  skill_launcher.rs  state_contract.rs
runtime/: README.md
scripts/: aicx-sync.sh  build_marketplace_bundle.py  install-foundations.sh  installer_brand.py  installer_gui.py  migrate_agents_workspace.sh  setup_vibecraft.py  vetcoders_install.py  vibecrafted
src/: app.rs  config.rs  (+10 more)
(+252 files in other folders)
