[package]
name = "vibecrafted-operator"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["VetCoders"]
description = "Rust operator console for Vibecrafted"
readme = "README.md"
homepage = "https://vibecrafted.io"
repository = "https://github.com/VetCoders/vc-operator"
documentation = "https://docs.rs/vibecrafted-operator"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
notify = "6"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
